--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-plus": "^2.3.5",
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
+    "vue-lazyload": "^3.0.0",
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
